--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -9,10 +9,10 @@ header {
   // *** Start Logo Styling ***
   .logo {
     display: inline-block;
-    margin: 16px 8px 8px 8px;
+    margin: 4px 8px;
 
     img {
-      width: 64px;
+      width: 48px;
     }
   }
   // *** End Logo Styling ***
@@ -28,15 +28,15 @@ header {
   .hamb {
     cursor: pointer;
     float: right;
-    padding: 44px 20px;
+    padding: 24px 20px;
 
     // styling of hamburger line
     .hamb-line {
       background: $light;
       display: block;
-      height: 4px;
+      height: 3px;
       position: relative;
-      width: 40px;
+      width: 28px;
       border-radius: 5px;
     }
 
@@ -55,11 +55,11 @@ header {
 
     // add spacing between hamburger lines
     .hamb-line::before {
-      top: 12px;
+      top: 8px;
     }
 
     .hamb-line::after {
-      top: -12px;
+      top: -8px;
     }
   }
   // *** End Hamburger Menu Styling ***
@@ -99,6 +99,7 @@ header {
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 50px;
     background-color: $primary-color;
     overflow: hidden;
     max-height: 0;
@@ -111,7 +112,7 @@ header {
         display: block;
         padding: 30px;
         color: $light;
-        font-size: 1.3rem;
+        font-size: .9rem;
         text-decoration: none;
         border-bottom: 2px solid $secondary-color;
 
@@ -130,7 +131,7 @@ header {
   @media (min-width: 768px) {
 
     .logo img {
-      width: 80px;
+      width: 40px;
       margin-left: 20px;
     }
 
@@ -149,8 +150,9 @@ header {
 
         a {
           border: none;
-          padding: 44px 4px 0 4px;
+          padding: 0;
           font-size: 1rem;
+          margin: 20px 8px 20px 8px;
 
           &:last-child {
             padding-right: 20px;
