--- a/src/stylesheets/defaults/_defaults.scss
+++ b/src/stylesheets/defaults/_defaults.scss
@@ -6,7 +6,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: $primary-color;
   color: $light;
   font-family: 'Roboto', sans-serif;
 }
