--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,2 +1,13 @@
 @import './defaults/defaults';
 @import './components/components';
+
+
+.landing-page {
+  background-image: url("../../docs/desktop.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
